add dependencies for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,15 @@ dist: disco
 compiler:
   - gcc
 
+addons:
+  apt:
+    sources:
+      - boost-latest
+    packages:
+      - libboost-dev
+      - libboost-system-dev
+
 before_script: ./install-wiringPi.sh
 script:
   - make
   - sudo make install
-
