--- a/meson.build
+++ b/meson.build
@@ -1,16 +1,17 @@
 project('raspberry-display', 'cpp', default_options : ['cpp_std=c++17'])
 cpp = meson.get_compiler('cpp')
 
-common_src = ['src/timer.cpp', 'src/display.cpp', 'src/font.cpp']
-mock_display_src = ['src/display.cpp', 'src/mock-display.cpp', common_src]
-real_display_src = ['src/display.cpp', 'src/ht1632.cpp', common_src]
-
 deps = [
     dependency('threads'),
     dependency('ncurses'),
     dependency('boost', modules: ['system']),
     cpp.find_library('wiringPi', required : true),
 ]
+
+common_src = ['src/timer.cpp', 'src/display.cpp', 'src/font.cpp']
+
+mock_display_src = ['src/mock-display.cpp', common_src]
+real_display_src = ['src/ht1632.cpp', common_src]
 
 websocket_src = ['src/websocket.cpp']
 curses_client_src = ['src/curses-client.cpp']
