fix case sensitive .gitignore-value

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
+.*.swp
+.cache/
+.vscode/
 *.pyc
 bin/
-obj/
-.*.swp
-wiringPi/
-tests/
-src/*.o
-.vscode/
-stderr.txt
 build/
-debug-build/
-src/font_generated.h
 compile_commands.json
-.cache/
+debug-build/
 display.log
+obj/
+src/*.o
+src/font_generated.h
+stderr.txt
+tests/
+WiringPi/
