change utf8 parsing, redo font header system

--- a/systemd/environment.conf
+++ b/systemd/environment.conf
@@ -16,3 +16,6 @@ Environment="MQTT_PASSWORD="
 # MQTT client settings
 Environment="MQTT_CLIENT_ID=raspberry-display"
 Environment="MQTT_TOPIC_PREFIX=display"
+
+# Logging
+Environment="LOG_LEVEL=DEBUG"
