clean up home assistant discovery

--- a/systemd/environment.conf
+++ b/systemd/environment.conf
@@ -17,5 +17,9 @@ Environment="MQTT_PASSWORD="
 Environment="MQTT_CLIENT_ID=raspberry-display"
 Environment="MQTT_TOPIC_PREFIX=display"
 
+# Home Assistant device ID (separate from MQTT client ID)
+# This will be generated during installation with a unique suffix
+# Environment="HA_DEVICE_ID=raspberry_display_<unique_id>"
+
 # Logging
 Environment="LOG_LEVEL=DEBUG"
